<resources>
    <string name="app_name">GetTestsApplication</string>
    <string name="add_a_test">Add a test</string>
    <string name="welcome">Welcome!</string>
    <string name="view_test_list">View Test List</string>
    <string name="made_with_nby_antailbaxt3r">Made with ♥\nby antailbaxt3r</string>
    <string name="developed_by_antailbaxt3r">Developed by antailbaxt3r</string>
    <string name="title">Title</string>
    <string name="obj">OBJ</string>
    <string name="test_title">Test Title</string>
    <string name="marks_scored">Marks Scored</string>
    <string name="max_marks">Max Marks</string>
    <string name="test_pattern">Test Pattern</string>
    <string name="jee_mains">JEE(Mains)</string>
    <string name="jee_m_a">JEE(M+A)</string>
    <string name="test_type">Test Type</string>
    <string name="objective">Objective</string>
    <string name="subjective">Subjective</string>
    <string name="add">ADD</string>
    <string name="add_test_details">Add Test Details</string>
    <string name="tap_to_select_date">Select date</string>
    <string name="view_details">View Details</string>
    <string name="completed" />
    <string name="common">Common</string>
    <string name="delete_all">Delete All</string>
    <string name="delete">Delete</string>
    <string name="green_shows_score">Green shows score</string>
    <string name="please_wait">Please wait ...</string>
</resources>
