<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.OpenDetailsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:padding="20dp"
        android:orientation="vertical">
        <TextView
            android:id="@+id/test_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textColor="@color/black"
            android:textSize="48sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/pattern"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/jee_mains"
                android:textSize="16sp"/>
            <TextView
                android:id="@+id/type"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:textAlignment="textEnd"
                android:layout_height="wrap_content"
                android:text="@string/obj"
                android:textSize="16sp"/>
        </LinearLayout>
        <TextView
            android:id="@+id/date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tap_to_select_date"
            android:layout_marginBottom="10dp"
            android:textSize="16sp"/>

        <com.github.mikephil.charting.charts.PieChart
            android:id="@+id/pie_chart"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/green_shows_score"
        android:textAlignment="center"
        android:layout_margin="10dp"
        android:textColor="@color/black"
        android:textSize="18sp"/>
    <Button
        android:id="@+id/delete_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@color/delete_red"
        android:text="@string/delete"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:padding="10dp"/>

</LinearLayout>